<resources>
    <string name="app_name">MovieDB</string>
    <string name="title_home">Popular Movie List</string>
    <string name="title_fav">Favorites</string>

    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Detail STRİNGS START -->
    <string name="id">ID: </string>
    <string name="genre">Genre: </string>
    <string name="releaseDate">Release Date: </string>
    <string name="overview">Overview: </string>
    <string name="status">Status: </string>
    <string name="tagline">Tagline: </string>
    <string name="voteCount">Vote Count: </string>
    <string name="voteAverage">Vote Average: </string>
    <string name="movieName">Movie Name</string>

    <!-- Detail STRİNGS END -->
    <string name="searchMovie">Search Movie...</string>
    <string name="didntFind">Sorry! We could not find whatever you want!</string>
</resources>